# cppext

./: .jenkinsfile  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  REFERENCE.md  barrier.hpp  future_queue.h  future_queue.hpp  future_queue.md  future_queue_reference.md  latch.h  semaphore.hpp  test.cc
cmake/: Doxyfile.in
cmake/Modules/: FindDOOCS.cmake
include/: barrier.hpp  finally.hpp  future_queue.hpp  ranges.hpp  semaphore.hpp  threadName.hpp  threadsafe_unit_test.hpp  type_erasing_vector.hpp
src/: example.cc  testFront.cc  testHasData.cc  testLatch.cc  testPerformance.cc  testPushPop.cc  testReadWriteAvailable.cc  testSemaphore.cc  testStresstest.cc  testWaitAny.cc  testWhenAny.cc
tests/: CMakeLists.txt  example.cc  example2.cc  testContinuations.cc  testEmpty.cc  testExceptions.cc  testFront.cc  testHasData.cc  testObtainWriteSlot.cc  testPerformance.cc  testPushPop.cc  testRanges.cc  testReadWriteAvailable.cc  testSemaphore.cc  testSharing.cc  testStresstest.cc  testStresstestMultiproducer.cc  testSwap.cc  testWhenAll.cc  testWhenAny.cc
tests/src/: testPushPop.cc
